--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-style: normal;
-	list-style: none;
-	-wekbkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-o-box-sizing: border-box;
-	box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-style: normal;
+  list-style: none;
+  -wekbkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
 }
 html {
   font-size: 62.5%;
@@ -21,8 +21,7 @@ h2,
 h3,
 h4,
 p,
-ul
-{
+ul {
   margin: 0;
   list-style: none;
   padding: 0;
@@ -38,7 +37,8 @@ abbr {
 :root {
   --text-color-heading: #fff;
   --default-color: #34495e;
-  --primary-color:  #34495e;
+  --primary-color: #34495e;
+  --grey-color: #a4a4a4;
 }
 
 header {
@@ -47,9 +47,19 @@ header {
   color: var(--text-color-heading);
 }
 
-main div {
-  max-width: 80rem;
-  margin: 2rem auto;
-  padding: 1rem;
-  line-height: 2.6rem;
+footer {
+  text-align: center;
+  line-height: 6rem;
+  background-color: var(--grey-color);
+  color: var(--text-color-heading);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#mapid {
+  margin: 0;
+  height: 88vh;
+  width: 100%;
 }
